# mlir-hello-world

./: CMakeLists.txt  README.md
.github/workflows/: test_dispatch.yml  test_wf.yml
include/: CMakeLists.txt
include/tiny/: AST.h  CMakeLists.txt  Lexer.h  MLIRGen.h  Parser.h  Passes.h  TinyDialect.h  TinyDialect.td  TinyOps.h  TinyOps.td
mlir/: CMakeLists.txt  LowerToAffine.cpp  LowerToAffineLoops.cpp  LowerToLLVM.cpp  LowerToLLVMPass.cpp  MLIRGen.cpp  TinyDialect.cpp  TinyOps.cpp
parser/: AST.cpp
tinyc/: CMakeLists.txt  main.cpp
